# Proto-agent

./: .gitignore  CHANGELOG.md  Config.py  README.md  agent.py  agent_settings.py  feedback_loop.py  main.py  pyproject.toml  tests.py  tool_kit_registry.py
.github/workflows/: main.yml
calculator/: calculator.py  lorem.txt  main.py  script.py  stats.txt  test.py
calculator/pkg/: calculator.py
docs/: README-full.md
functions/: call_function.py  get_file_content.py  get_files_info.py  is_in_boundary.py  run_python_file.py  write_file.py  write_function.py
proto_agent/: __init__.py  agent.py  agent_settings.py  main.py
proto_agent/tool_kits/: __init__.py  file_operation_toolkit.py  system_info_toolkit.py
src/proto_agent/: __init__.py  __main__.py  agent.py  agent_settings.py  main.py
tests/: test_1.py  test_2.py  test_3.py  test_4.py  test_response_schema.py
tool_kits/: __init__.py  base_toolkit.py  file_operation_toolkit.py  system_info_toolkit.py
tools/: file_operation_toolkit.py
